Fixed bug where nav menu overlapped

--- a/baseStyle.css
+++ b/baseStyle.css
@@ -9,3 +9,9 @@ margin: 0;
     background-color: #f9f9f9; /* Change background color */
     cursor: text; /* Change cursor */
 }
+.w3-bar-block .w3-bar-item {padding:20px;
+}
+.w3-content {
+    /* Add padding or margin to create space below the burger menu */
+    padding-top: 100px; /* Adjust this value to create the desired space */
+  }
